# Experimentah

./: .gitignore  Cargo.toml  New_Architecture.drawio  Old_Architecture.drawio  README.md  compose.yml
.github/workflows/: actions.yml
cli/: Cargo.toml  localhost_config.toml  localhost_experiment_config.toml
cli/src/: lib.rs  main.rs
controller/: Cargo.toml
controller/configs/: localhost_config.toml  localhost_experiment_config.toml  test_config.toml  test_experiment_config.toml
controller/src/: command.rs  db.rs  lib.rs  main.rs  parse.rs  routes.rs  run.rs  runner_runner.rs  session.rs  ssh.rs
controller/test/: test_config.toml  test_experiment_config.toml  valid_config.toml  valid_experiment_config.toml
controller/tests/: common.rs  parse.rs  routes.rs  valid_config.toml  valid_experiment_config.toml
controller/tests/configs/: config_empty.toml  config_exporter_only.toml  experiment_config_expected_arguments.toml  experiment_config_expected_arguments_variations.toml  experiment_config_valid.toml
controller/tests/execute/: 2arg-execute.sh
frontend/: README.md  index.html  package-lock.json  package.json  pnpm-lock.yaml  style.css
frontend/src/: app.css
metrics-api/: .env  Cargo.toml  diesel.toml
metrics-api/docker/: compose.yml  getpass.sh  prep.sh
metrics-api/src/: lib.rs  main.rs  models.rs  schema.rs
report-api/: Cargo.toml
report-api/src/: lib.rs  main.rs
resources/: test_config.toml  test_experiment_config.toml
runner/: Cargo.toml  README.md  Rocket.toml
runner/src/: .env_example  api_types.rs  main.rs  runner.rs
runner/test/: example_script.sh  requests.json  valid_job.json
src/: main.rs
ssh_utils/: Cargo.toml
ssh_utils/src/: main.rs  ssh_utils.rs
(+87 files in other folders)
