[package]
name = "controller"
version.workspace = true
edition.workspace = true

[dependencies]
toml = { workspace = true }
serde_json = { workspace = true }
serde = { workspace = true }
# clap = { workspace = true }
# reqwest = { workspace = true }
tokio = { workspace = true }
shlex = "=1.3.0"
axum = {version = "0.8", features = ["multipart", "macros", "ws"]}
env_logger = "0.11.8"
log = "0.4.27"
tower = "0.5.2"
futures = "0.3.31"
futures-core = "0.3.31"
futures-util = "0.3.31"
openssh = "0.11.5"
openssh-sftp-client = { version = "0.15.2", features = ["openssh"] }
rusqlite = { version = "0.37.0", features = ["bundled"]}
regex = "1.11.2"
strum = {version = "0.27.2", features = ["derive"]}

